_sass/nav.scss
$navbar-color: #2E3440;
$navbar-brand-font-size: 1.8rem;

:root {
    --cursor-color: #ffffff;

    .dark {
        --cursor-color: #ffffff;
    }
}

.navbar-fixed-top {
    -webkit-transition: padding .3s;
    -moz-transition: padding .3s;
    transition: padding .3s;
}

.navbar-fixed-top .navbar-brand {
    font-size: $navbar-brand-font-size;
    color: #ffffff;
    font-weight: 600;
    text-transform: lowercase;
}

@media (max-width: 1000px) {
    .navbar-header {
      float: none;
    }
  
    .navbar-toggle {
      display: block;
    }
  
    .navbar-collapse {
      border-top: 1px solid #eee;
      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
  
    .navbar-collapse.collapse {
      display: none!important;
    }
  
    .navbar-collapse.in {
      display: block!important;
    }
  
    .navbar-nav {
      float: none!important;
      margin: 7.5px -15px;
    }
  
    .navbar-nav>li {
      float: none;
    }
  
    .navbar-nav>li>a {
      padding-top: 10px;
      padding-bottom: 10px;
    }
  }
.navbar-center {
    float: none;
    display: inline-block;
    vertical-align: top;
    padding-left: 0;
    padding-right: 0;
}

.navbar-brand:hover {
    color: #48ca85 !important;
    font-size: $navbar-brand-font-size !important;
}

.navbar {
    text-transform: capitalize;
    font-weight: 600;
    font-size: 1rem;
    background: $navbar-color;

    @media screen and (min-width: 900px) {
        height: 4.5  rem;
        align-items: center;
    }
}

.navbar a:hover {
    outline: 0;
    font-size: 1.5rem;
    color: #48ca85 !important;
}

.navbar .navbar-nav {
    letter-spacing: 0px;
    font-size: 1.7rem;
}

.navbar .navbar-nav li a {
    outline: 3;
    color: #ffffff;
}

.navbar-header {
    display: flex;
    /* Allow flexible arrangement of items */
    align-items: center;
    /* Vertically center items */
    justify-content: space-between;
    /* Space between the collapse button and other elements */
}



.collapse-button {
    height: 4rem;
    font-size: 3rem;
    padding: 0;
    padding-left: 0.7rem;
    padding-right: 0.7rem;
    border: 0px;
    margin-left: -1rem;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
    color: #ffffff;

    .dark {
        color: #ffffff;
    }

    border-color: #e6e6e6;
}

.nav-link.active,
.nav-item.show .nav-link {
    border-color: #e6e6e6;
    color: #e6e6e6;
}

.navbar-inverse {
    border: 0;
}

.nav-link :focus {
    color: #e6e6e6;
}

$icon-size : 3.2rem;

.dark-mode {
    background-color: #a6adc8;
    color: $navbar-color;
    border-radius: 4rem;
    display: inline-block;
    vertical-align: middle;
    font-size: 2rem;
    margin-left: -0.5rem;
    height: $icon-size;
    width: $icon-size;
    padding: 0px;

    a {
        color: white;
    }
}

button:focus {
    background-color: #a6adc8;
    color: $navbar-color;
}

button:hover {
    background-color: #48ca85;
    color: $navbar-color;
}

.blinking {
    width: 0.5rem;
    height: 1.7rem;
    display: inline-block;
    background-color: var(--cursor-color);
    -webkit-animation: blinking 2s infinite;
    animation: blinking 2s infinite;
}

@keyframes blinking {
    0% {
        background-color: transparent;
    }

    49% {
        background-color: transparent;
    }

    50% {
        background-color: var(--cursor-color);
    }
}


.toggle-btn {
  position: relative;
  width: 45px;
  height: 3rem;
  background-color: #333;
//   border: none;
  border: 1px solid white;
  border-radius: 20px;
  cursor: pointer;
  outline: none;
  transition: background 0.4s;
  margin: 0px;
  padding: 0px;
  padding: 0;

  @media (min-width: 849px) and (max-width: 990px) {
      width: 45px;
  }


}

.toggle-btn:focus {
    background-color: #333;
    border: 1px solid white;

}

.toggle-btn.dark{
    background-color: #ccc;
}

.toggle-btn.dark:focus{
    background-color: #ccc;
    border: 1px solid white;

}


.toggle-circle {
  position: absolute;
  top: 0.4rem;
  left: 0.5rem;
  width: 2rem;
  height: 2rem;
  background: white;
  color: #2E3440 !important;
  border-radius: 50%;
  padding: 0px;
  align-items: center;
  justify-content: center;
  transition: transform 0.4s ease; /* smooth sliding */
}

.mode-logo::before{
    position: absolute;
    top: 0.42rem;
    left: 0.45rem;
    font-weight: 800;
    font-size: 1.2rem;
}

.toggle-btn.active .toggle-circle {
  transform: translateX(13px); /* moves to the right */
  background: white;
}

.toggle-btn.active:hover {
  background-color: #797979;
}

.navbar-divider{
    @media screen and (max-width: 1000px) {
        display: none;
    }
}

.dropdown-divider{
    @media screen and (min-width: 1000px) {
        display: none;
    }
}

#contact{
    display: none;
    @media screen and (max-width: 1000px) {
            display: inline-block;
            margin-right: 1rem;
    }
}

